s_routes/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routesapi
  namespace: waste-app
  labels:
    app: routesapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: routesapi
  template:
    metadata:
      labels:
        app: routesapi
    spec:
      containers:
        - name: routesapi
          image: registry.deti/waste-app/routesapi:latest
          ports:
            - containerPort: 5002
