s_routes/k8s/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bd-routes
  namespace: waste-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bd-routes
  template:
    metadata:
      labels:
        app: bd-routes
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.6
          volumeMounts:
            - name: mariadb-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-storage
          persistentVolumeClaim:
            claimName: bd-routes-pvc
