s_routes/k8s/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bd-routes
  namespace: waste-app
spec:
  selector:
    app: bd-routes
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
